# causal-gate

./: .dockerignore  .env.example  .gcloudignore  .gitignore  ARCHITECTURE.md  DETAIL-DESIGN.md  Dockerfile  HANDOFF.md  LICENSE  Makefile  PRD.md  README.md  cloudbuild.yaml  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml
apps/web/: index.html  package-lock.json  package.json  tsconfig.json
apps/web/src/: main.tsx  styles.css  ui-contract.test.ts
artifacts/: recorded-analysis.json
docs/: ASSURANCE-SPEC.md  DEPLOYMENT.md  INTENT-ASSURANCE.md  SAAS-BYOK.md  SDK.md  codex-build-log.md
evals/: README.md  corpus-manifest.json
examples/: basic_sdk.py  langgraph_adapter.py  openai_agents_processor.py
scripts/: verify_live_analysis.py  verify_recorded_analysis.py
scripts/deploy/: deploy-aws-apprunner.sh  deploy-gcp-cloud-run.sh
scripts/local/: run-macos-linux.sh  run-windows.ps1  stop-macos-linux.sh  stop-windows.ps1
src/agentflight/: __init__.py  adapters.py  api.py  assurance.py  authorization.py  benchmark.py  cli.py  demo.py  detectors.py  flight_record.py  intent_compiler.py  live_analysis.py  models.py  ontology.json  recorder.py  redaction.py  reporting.py  storage.py
src/causalgate/: __init__.py  adapters.py  api.py  assurance.py  authorization.py  benchmark.py  causal_record.py  cli.py  demo.py  detectors.py  intent_compiler.py  live_analysis.py  models.py  ontology.json  policy.py  recorder.py  redaction.py  reporting.py  sinks.py  storage.py
tests/: test_adapters.py  test_api.py  test_assurance.py  test_authorization.py  test_causal_record.py  test_core.py  test_deployment_scripts.py  test_flight_record.py  test_ingestion.py  test_intent_compiler.py  test_live_analysis.py  test_policy_benchmark.py  test_redaction.py  test_sdk.py
