[project]
name = "agentflight-recorder"
version = "0.1.0"
description = "Evidence-linked security traces and deterministic replay for AI agents"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.34,<1",
  "pydantic>=2.10,<3",
  "openai>=1.0,<3",
  "openai-agents>=0.2,<1",
]

[project.optional-dependencies]
dev = ["httpx>=0.28,<1", "pytest>=8,<9", "pytest-cov>=6,<7"]

[project.scripts]
agentflight = "agentflight.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentflight"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
