[project]
name = "causal-gate"
version = "0.1.0"
description = "Deterministic intent control, causal assurance, and release gating for AI agents"
requires-python = ">=3.11"
readme = "README.md"
license = {file = "LICENSE"}
authors = [{name = "DistributedApps.AI"}]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Typing :: Typed",
]
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.34,<1",
  "pydantic>=2.10,<3",
  "openai>=1.0,<3",
  "openai-agents>=0.2,<1",
]

[project.optional-dependencies]
dev = ["httpx>=0.28,<1", "pytest>=8,<9", "pytest-cov>=6,<7"]
langgraph = ["langgraph>=1.2,<2"]

[project.urls]
Homepage = "https://github.com/kenhuangus/causal-gate"
Documentation = "https://github.com/kenhuangus/causal-gate/blob/main/docs/SDK.md"
Repository = "https://github.com/kenhuangus/causal-gate"
Issues = "https://github.com/kenhuangus/causal-gate/issues"

[project.scripts]
causalgate = "causalgate.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/causalgate"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
